--- a/src/App.css
+++ b/src/App.css
@@ -25,4 +25,7 @@ a:link, a:visited, a:active {
   /* grid-template-areas: 
   "Navigation Information" ; */
 }
-
+::selection{
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+}
